--- a/src/Containers/Experience/Experience.css
+++ b/src/Containers/Experience/Experience.css
@@ -13,10 +13,11 @@
   display: flex;
   flex-direction: column;
   gap: 0;
+  width: var(--content-width);
 }
 
 .experience-card-wrapper {
-  width: 50vw;
+  width: 100%;
 }
 
 .experience-card {
@@ -110,7 +111,6 @@
   .experience-container {
     display: flex;
     flex-direction: column;
-    width: 90vw;
   }
 
   .experience-card {
